--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="stylecss.css">
+<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylecss.css">
 
 </head>
 
@@ -49,11 +49,11 @@
 </div>
 
 <div>
-<img class="imagesidebar" src="pic.jpg">
+<img class="imagesidebar" src="{{ site.baseurl }}pic.jpg">
 </div>
 
 <div class="main">
-<h1> HANNIBAL - THE BATTLE Ò CANNAE</h1>
+<h1> HANNIBAL - THE BATTLE Ã’ CANNAE</h1>
 <p>
 This is something inside that we want to type. Very easy.
 This is something inside that we want to type. Very easy
@@ -62,7 +62,7 @@ This is something inside that we want to type. Very easy
 This is something inside that we want to type. Very easy
 This is something inside that we want to type. Very easy
 </p>
-<h1> HANNIBAL - THE BATTLE Ò CANNAE</h1>
+<h1> HANNIBAL - THE BATTLE Ã’ CANNAE</h1>
 
 <p>
 This is something inside that we want to type. Very easy.
@@ -77,7 +77,7 @@ This is something inside that we want to type. Very easy
 
 
 <div class="main">
-<h1> HANNIBAL - THE BATTLE Ò CANNAE</h1>
+<h1> HANNIBAL - THE BATTLE Ã’ CANNAE</h1>
 <p>
 This is something inside that we want to type. Very easy.
 This is something inside that we want to type. Very easy
@@ -86,7 +86,7 @@ This is something inside that we want to type. Very easy
 This is something inside that we want to type. Very easy
 This is something inside that we want to type. Very easy
 </p>
-<h1> HANNIBAL - THE BATTLE Ò CANNAE</h1>
+<h1> HANNIBAL - THE BATTLE Ã’ CANNAE</h1>
 
 <p>
 This is something inside that we want to type. Very easy.
